recursion.logo.spiral.SpiralUse.scala.error
Erreur de compilation :
SpiralUse:3: error: ')' expected but ';' found.
    spiral(50,91,1,1;
                    ^